myproject/frontend/resources/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector: {}
  ports:
    - name: http
      protocol: TCP
      port: 81
      targetPort: 80
  type: LoadBalancer
