myproject/frontend/resources/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: frontend.local-staging
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-service
            port:
              number: 80
  tls:
  - hosts:
    - frontend.local-staging
    secretName: frontend-tls
